--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ librosa<=0.11.0
 loguru==0.7.3
 tensorflow-hub==0.16.1
 matplotlib==3.10.7
+sed_eval==0.2.1
 
 # For Audio Mamba, the same file is found in external/audio_mamba/requirements.txt
 # accelerate==0.31.0
